--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Lamar re-coded this-->
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1538,6 +1539,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
 /* <![CDATA[ */
 var wc_cart_fragments_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/?wc-ajax=%%endpoint%%","cart_hash_key":"wc_cart_hash_0de015aac4d03da43a5869dc489e3389","fragment_name":"wc_fragments_0de015aac4d03da43a5869dc489e3389","request_timeout":"5000"};
 /* ]]> */
+<!--Lamar re-coded this-->
 </script>
 <script type="text/javascript" src="js/cart-fragments.min.js" id="wc-cart-fragments-js"></script>
 <script type="text/javascript" src="js/splide.min.js" id="moringa-splide-js"></script>
