--- a/index_1.html
+++ b/index_1.html
@@ -1547,8 +1547,8 @@ var wc_cart_fragments_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax
 <script type="text/javascript" src="js/accordion.min.js" id="moringa-accordion-js"></script>
 <script type="text/javascript" src="js/slidetoggle.js" id="moringa-slide-toggle-js"></script>
 <script type="text/javascript" src="js/app.js" id="moringa-script-js"></script>
-<!-- Start of moringasupport Zendesk Widget script -->
+<!-- *execute* Start of moringasupport Zendesk Widget script -->
 <script id="ze-snippet" src="js/snippet.js"> </script>
-<!-- End of moringasupport Zendesk Widget script -->
+<!-- *execute* End of moringasupport Zendesk Widget script -->
 
 </body></html>
